--- a/HDSE-II/flutter/mobileapp/pubspec.yaml
+++ b/HDSE-II/flutter/mobileapp/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   device_preview: ^1.3.1
   fluttertoast: ^9.0.0
+  get: ^4.7.2
+  form_field_validator: ^1.1.0
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
 
 dev_dependencies:
   flutter_test:
