--- a/HDSE-II/flutter/mobileapp/pubspec.yaml
+++ b/HDSE-II/flutter/mobileapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   form_field_validator: ^1.1.0
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
 
 dev_dependencies:
   flutter_test:
